# PARALLEL_LAUNCHER

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  app.plist  app.pro  appicon.icns  bps-mime.xml  ca.parallel_launcher.ParallelLauncher.desktop  ca.parallel_launcher.ParallelLauncher.metainfo.xml  format.py  lsjs.c  osx-bundle.sh  qmake-debug.sh  qmake-release.sh  sdl-proxy.c  win-installer-common.iss  win32-installer.iss  win64-installer.iss  windows-deploy-translations.ps1
!third_party_libs/SQLite/: Esenthel Changes.txt  sqlite3.h
!third_party_libs/SQLite/Windows/: SQLite.nnsdk.xml  SQLite.sln  SQLite.vcxproj  clean.bat
data/: parallel_n64_next_libretro.info  resources.qrc
data/fallback-icons/: LICENSE
lang/: parallel-launcher-only-star-display_ar.ts  parallel-launcher-only-star-display_de.ts  parallel-launcher-only-star-display_en_gb.ts  parallel-launcher-only-star-display_en_us.ts  parallel-launcher-only-star-display_es.ts  parallel-launcher-only-star-display_fr.ts  parallel-launcher-only-star-display_fr_ca.ts  parallel-launcher-only-star-display_it.ts  parallel-launcher-only-star-display_pt.ts  parallel-launcher_ar.ts  parallel-launcher_de.ts  parallel-launcher_en_gb.ts  parallel-launcher_en_us.ts  parallel-launcher_es.ts  parallel-launcher_fr.ts  parallel-launcher_fr_ca.ts  parallel-launcher_it.ts  parallel-launcher_pt.ts
pkg/arch/: PKGBUILD
pkg/deb/: control  copyright  install  postinst.ex  preinst.ex  prerm.ex  rules
pkg/rpm/: parallel-launcher.spec
src/: main.cpp  types.hpp
src/core/: app-context.cpp  app-context.hpp  async.hpp  bps.cpp  bps.hpp  buffer.hpp  controller.cpp  controller.hpp  discord.cpp  discord.hpp  file-controller.cpp  file-controller.hpp  filesystem.cpp  filesystem.hpp  flags.hpp  gpu-telemetry.cpp  gpu-telemetry.hpp  hotkeys.cpp  hotkeys.hpp  is-viewer.cpp  is-viewer.hpp  json.cpp  json.hpp  libpl.cpp  libpl.hpp  logging.cpp  logging.hpp  migration.cpp  migration.hpp  numeric-string.cpp  numeric-string.hpp  opengl.cpp  opengl.hpp  preset-controllers.cpp  preset-controllers.hpp  qthread.cpp  qthread.hpp  rate-limiter.cpp  rate-limiter.hpp  retroarch-sdl-fix.cpp  (+41 more)
src/db/: data-provider.cpp  data-provider.hpp  db-migration.cpp  sqlite.cpp  sqlite.hpp  transaction.hpp
src/input/: gamepad-controller.cpp  gamepad-controller.hpp  gamepad-input-driver.hpp  input-driver.cpp  input-driver.hpp  keyboard.cpp  keyboard.hpp  sdl-lsjs.cpp  sdl-lsjs.hpp
src/input/common/: sdl-driver.cpp  sdl-driver.hpp
src/input/linux/: joydev-driver.cpp  joydev-driver.hpp
src/input/macos/: hid-driver.cpp  hid-driver.hpp
src/input/windows/: direct-input-driver.cpp  direct-input-driver.hpp
src/plugins/: discord-plugin.cpp  discord-plugin.hpp
src/polyfill/: backtrace.cpp  backtrace.hpp  base-directory.cpp  base-directory.hpp  byteswap.hpp  crash.cpp  crash.hpp  env.cpp  env.hpp  fifo-pipe-posix.cpp  fifo-pipe-windows.cpp  fifo-pipe.hpp  file-dialog.cpp  file-dialog.hpp  file-explorer.cpp  file-explorer.hpp  file-search.cpp  file-search.hpp  file.cpp  file.hpp  process.cpp  process.hpp  random.cpp  random.hpp  sha1.cpp  sha1.hpp
src/polyfill/macos/: apple-util.cpp  apple-util.hpp
src/polyfill/windows/: locale.cpp  locale.hpp  unicode.cpp  unicode.hpp
src/rhdc/core/: credentials.cpp  credentials.hpp  hack.hpp  layout.cpp  layout.hpp  libpl-rhdc.cpp  libpl-rhdc.hpp  plugin-detect.cpp  plugin-detect.hpp  rhdc-settings.cpp  rhdc-settings.hpp  rom-plugin-updater.cpp  rom-plugin-updater.hpp  sync.cpp  sync.hpp
src/rhdc/ui/: rhdc-download-dialog.cpp  rhdc-download-dialog.hpp  rhdc-hack-list-view.cpp  rhdc-hack-list-view.hpp  rhdc-hack-view.cpp  rhdc-hack-view.hpp  rhdc-hack-widget.cpp  rhdc-hack-widget.hpp  rhdc-layout-tester-dialog.cpp  rhdc-layout-tester-dialog.hpp  rhdc-login-dialog.cpp  rhdc-login-dialog.hpp  rhdc-rating-dialog.cpp  rhdc-rating-dialog.hpp  rhdc-save-editor.cpp  rhdc-save-editor.hpp  rhdc-save-sync-dialog.cpp  rhdc-save-sync-dialog.hpp  rhdc-ui-state.hpp  rhdc-view-bubble.cpp  rhdc-view-bubble.hpp  star-bit-toggle.cpp  star-bit-toggle.hpp  star-display-widget.cpp  star-display-widget.hpp  star-set.cpp  star-set.hpp
src/rhdc/web/: api-helpers.cpp  api-helpers.hpp  api.hpp  games.cpp  login.cpp  misc.cpp  require-login.hpp  starpower.cpp  telemetry.cpp
src/ui/: bind-input-dialog.cpp  bind-input-dialog.hpp  controller-config-dialog.cpp  controller-config-dialog.hpp  controller-select-dialog.cpp  controller-select-dialog.hpp  core-finder-dialog.cpp  core-finder-dialog.hpp  core-installer.cpp  core-installer.hpp  crash-report-dialog.cpp  crash-report-dialog.hpp  date-time-offset-edit.cpp  date-time-offset-edit.hpp  device-busy-dialog.cpp  device-busy-dialog.hpp  direct-play-window.cpp  direct-play-window.hpp  direct-play.cpp  direct-play.hpp  download-dialog.cpp  download-dialog.hpp  error-notifier.cpp  error-notifier.hpp  flow-layout.cpp  flow-layout.hpp  get-controller-port-dialog.cpp  get-controller-port-dialog.hpp  hotkey-edit-widget.cpp  hotkey-edit-widget.hpp  icons.cpp  icons.hpp  import-save-dialog.cpp  import-save-dialog.hpp  import-sd-card-dialog.cpp  import-sd-card-dialog.hpp  input-mode-select.cpp  input-mode-select.hpp  is-viewer-window.cpp  is-viewer-window.hpp  (+58 more)
src/ui/designer/: bind-input-dialog.ui  controller-config-dialog.ui  controller-select-dialog.ui  crash-report-dialog.ui  device-busy-dialog.ui  direct-play-window.ui  hotkey-edit-panel.ui  import-sd-card-dialog.ui  keyboard-config-dialog.ui  log-viewer-dialog.ui  main-window.ui  manage-groups-dialog.ui  manage-sd-cards-dialog.ui  multiplayer-controller-select-dialog.ui  neutral-input-dialog.ui  now-playing-widget.ui  rom-settings-widget.ui  rom-source-dialog.ui  save-file-editor-dialog.ui  save-slot-editor-dialog.ui  settings-dialog.ui  singleplayer-controller-select-dialog.ui
src/updaters/: retroarch-updater.cpp  retroarch-updater.hpp  retroarch-updater.mac.cpp  self-updater.cpp  self-updater.hpp  update-dialog.cpp  update-dialog.hpp  update-dialog.ui
windows-mount-sd-card/: mount-sd-card.c  mount-sd-card.vcxproj
(+14 files in other folders)
